force-app/main/default/objects/Documentation__c/Documentation__c.object-meta.xml
<CustomObject>
    <description>Documentation for asceND Automation, configuration, and customizations</description>
    <label>Documentation</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Documentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>