force-app/main/default/objects/Documentation__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <inlineHelpText>Other configurations that rely on this functionality or vice versa.</inlineHelpText>
    <label>Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>