force-app/main/default/objects/Documentation__c/fields/Included_on_asceND_Automation_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Included_on_asceND_Automation_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Note if the automation described in this configuration is on the asceND Automation Inventory.</inlineHelpText>
    <label>Included on asceND Automation Inventory</label>
    <type>Checkbox</type>
</CustomField>