force-app/main/default/objects/Documentation__c/fields/Install_Upgrade_Deployment_Information__c.field-meta.xml
<CustomField>
    <fullName>Install_Upgrade_Deployment_Information__c</fullName>
    <label>Install/Upgrade/Deployment Information:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>