force-app/main/default/objects/Documentation__c/fields/Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Monitoring__c</fullName>
    <label>Monitoring:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>