force-app/main/default/objects/Documentation__c/fields/Other_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Other_Documentation__c</fullName>
    <label>Other Documentation:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>