force-app/main/default/objects/Documentation__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <description>Overview of the Automation, Configuration, or Customization.</description>
    <inlineHelpText>Overview of the Automation, Configuration, or Customization.</inlineHelpText>
    <label>Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>