force-app/main/default/objects/Documentation__c/fields/Permissions_and_Security__c.field-meta.xml
<CustomField>
    <fullName>Permissions_and_Security__c</fullName>
    <inlineHelpText>Permission and Security Considerations for this Configuration.</inlineHelpText>
    <label>Permissions and Security</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>