force-app/main/default/objects/Documentation__c/fields/Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>Process_Flow__c</fullName>
    <inlineHelpText>Link to Flow Chart or description of process flow.</inlineHelpText>
    <label>Process Flow</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>