force-app/main/default/objects/Documentation__c/fields/Service_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Service_Expectations__c</fullName>
    <label>Service Expectations:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>