force-app/main/default/objects/Documentation__c/fields/Test_Scripts__c.field-meta.xml
<CustomField>
    <fullName>Test_Scripts__c</fullName>
    <inlineHelpText>Link to Test Scripts document or a description of testing steps.</inlineHelpText>
    <label>Test Scripts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>