force-app/main/default/objects/Documentation__c/fields/Troubleshooting__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting__c</fullName>
    <inlineHelpText>Description of troubleshooting techniques for this functionality.</inlineHelpText>
    <label>Troubleshooting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>