force-app/main/default/objects/Documentation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Overview__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>